--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "react-share": "^5.1.0"
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11"
