--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_APP_API_URL=https://library-management-system-ce6z.onrender.com
-VITE_APP_COMMON_PATH="/api/common"
-VITE_APP_ADMIN_PATH="/api/admin"
+VITE_APP_COMMON_PATH="api/common"
+VITE_APP_ADMIN_PATH="api/admin"
