--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_APP_COMMON_PATH="api/common"
 VITE_APP_ADMIN_PATH="api/admin"
 VITE_APP_USER_ROOT_URL=https://library-management-system-f9gh.onrender.com/api/user
 VITE_APP_GET_USER_DETAILS=profile/
+VITE_APP_UPDATE_USER_DETAILS=auth/user-details/
