accept the library card from the db

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ VITE_APP_ADMIN_PATH="api/admin"
 VITE_APP_USER_ROOT_URL=https://library-management-system-f9gh.onrender.com/api/user
 VITE_APP_GET_USER_DETAILS=profile/
 VITE_APP_UPDATE_USER_DETAILS=auth/user-details/
+VITE_APP_USER_ROOT_URL_2=https://library-management-system-ce6z.onrender.com/api/user
+VITE_APP_UPDATE_USER_SUBJECT=profile/update/fav-sub
+VITE_APP_GET_LIBRARY_CARDS=profile/get/library-card-details
