--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-share": "^5.1.0",
