--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "library-management-system",
+  "homepage":"https://imamul5641.github.io/Library_Management_System/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
