--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "react-whatsapp": "^0.3.0",
+    "react-whatsapp-button": "^2.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11"
   },
