--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_APP_API_URL=https://library-management-system-ce6z.onrender.com
 VITE_APP_COMMON_PATH="api/common"
 VITE_APP_ADMIN_PATH="api/admin"
+VITE_APP_USER_PATH="api/user"
 VITE_APP_USER_ROOT_URL=https://library-management-system-f9gh.onrender.com/api/user
 VITE_APP_USER_ROOT_URL_2=https://library-management-system-ce6z.onrender.com/api/user
