--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "library-management-system",
-  "homepage":"https://imamul5641.github.io/Library_Management_System/",
+  "homepage": "https://imamul5641.github.io/Library_Management_System/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,9 +19,10 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/x-date-pickers": "^7.7.1",
     "@mui/x-data-grid": "^7.7.1",
+    "@mui/x-date-pickers": "^7.7.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "ag-grid-react": "^32.0.2",
     "appwrite": "^15.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
