--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.7.1",
+    "@mui/x-date-pickers": "^7.10.0",
+    "@mui/x-date-pickers-pro": "^7.10.0",
     "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.3",
     "ag-grid-react": "^31.3.2",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
@@ -33,10 +36,12 @@
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@mui/system": "^5.16.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
